--- a/package.json
+++ b/package.json
@@ -156,13 +156,15 @@
 
         "yargs": "^17.2.1",
 
-        "yt-search": "^2.10.3",
-
         "dhn-api": "^1.1.3",
 
         "xfarr-api": "^1.0.3",
 
         "yuzzu-api": "^1.0.2",
+        
+        "youtube-yts": "^2.0.0",,
+
+        "youtubedl-core": "^4.11.2"
 
         "hxz-api": "^1.0.1"
 
