--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
 
         "yuzzu-api": "^1.0.2",
         
-        "youtube-yts": "^2.0.0",,
+        "youtube-yts": "^2.0.0",
 
         "youtubedl-core": "^4.11.2",
 
